Fix overlap issue - decrease logo size  till 1024.

--- a/src/components/logo.module.css
+++ b/src/components/logo.module.css
@@ -34,7 +34,7 @@
     
 }
 
-@media only screen and (min-width: 744px) {
+@media only screen and (min-width: 1024px) {
     .logoGraphic {
         width: 178px;
     }
